# ChangeLog for dev-lang/ruby
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.340 2008/07/15 18:07:15 graaff Exp $

  05 Sep 2008; Alex Legler <gentoo@a3li.info>
  +files/ruby-1.9.0.4-entity_expansion_limit.diff, ruby-1.9.0.4.ebuild:
  Added fix for rexml vulnerability (bug #236060; CVE-2008-3790)

  30 Aug 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Add ebuild for ruby 1.9.0.4 based on work in bug 203706

  30 Aug 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Drop 1.8.* versions that are (or were) in the official tree already.

  23 Jul 2008; Sven Schwyn <schwyn@bitcetera.com> ruby-1.9.0.2.ebuild:
  New ebuild from #203706 thanks to Senuma Takahiko and Mark Somerville.

*ruby-1.9.0.2 (23 Jul 2008)

  15 Jul 2008; Hans de Graaff <graaff@gentoo.org> ruby-1.8.6_p230.ebuild:
  Drop cjk support since the most recent oniguruma patches no longer apply to
  this version, #230111.

  29 Jun 2008; Hans de Graaff <graaff@gentoo.org>
  +files/ruby-1.8.6-revert-r15856.patch, +ruby-1.8.6_p230.ebuild:
  Try to fix the security issues reported in #225465 for ruby 1.8.6.
  Unfortunately the official p230 has a change which causes segmentation faults
  for applications like Rails and RSpec, so we are reverting that specific
  change.

*ruby-1.8.7_p22 (29 Jun 2008)

  29 Jun 2008; Caleb Tennis <caleb@gentoo.org> -ruby-1.8.7.ebuild,
  +ruby-1.8.7_p22.ebuild:
  bump 1.8.7 for security fix

  20 Jun 2008; Caleb Tennis <caleb@gentoo.org> -ruby-1.8.6_p230.ebuild:
  nevermind, don't bump this yet

*ruby-1.8.6_p230 (20 Jun 2008)

  20 Jun 2008; Caleb Tennis <caleb@gentoo.org> +ruby-1.8.6_p230.ebuild:
  version bump

*ruby-1.8.7 (10 Jun 2008)

  10 Jun 2008; Caleb Tennis <caleb@gentoo.org> -ruby-1.8.7_pre2.ebuild,
  +ruby-1.8.7.ebuild:
  bump 1.8.7 to final

*ruby-1.8.7_pre2 (21 Apr 2008)

  21 Apr 2008; Richard Brown <rbrown@gentoo.org> -ruby-1.8.7_pre1.ebuild,
  +ruby-1.8.7_pre2.ebuild: