@@ -4,6 +4,6 @@ AUX ruby-1.9.0.4-entity_expansion_limit.diff 3402 RMD160 aa437e3f52576a8bd04fad6
 DIST ruby-1.9.0-2.tar.bz2 5282728 RMD160 abf70f5380f91f25130edde884deac6035afae60 SHA1 e7253d4b091925c661fe7f57389ab59d8a3e99ff SHA256 913d2bfd03e4285f61e3d343925ab8286ebfc5f7f4a7c861de7a160219cd1351
 DIST ruby-1.9.0-4.tar.bz2 5546544 RMD160 16021e0ac7c148cd6eea3c4e9665f52301ae7ad0 SHA1 066b35fa0e860c5392a1382b065fbba582d9de46 SHA256 09a91a60fba308a45ab8d3e691ec5ab279b36b646e75ad68d1d45679bdc4cbce
 EBUILD ruby-1.9.0.2.ebuild 4605 RMD160 de4201fab2da67c530f418c1e267aeb27524eecf SHA1 66b433e5cc1293157e31d1e2613c1917cfadb906 SHA256 07ad3bb93eef130777d722b683fdb1c4e190df8f09c29f7b419e13238bd21aa2
-EBUILD ruby-1.9.0.4.ebuild 4640 RMD160 a708935e030e6f9ae7916370df2afce05625e01a SHA1 58a1c59bf3eda1126acd0dbdf4bbc61e6be2385d SHA256 bf6d357317003ef90e42b17a0491edad3ba1f53fc70b6d43859e4da8cece83d3
-MISC ChangeLog 50359 RMD160 c4b03e818e47120afce82d6ab58cbbd3c462b761 SHA1 7ae9d4ce8503124b0ccc56f4c3040d6e90b5e038 SHA256 aba110e51893b85c49e0e1408b18d49abb7a40d5a67fb90dbe750ab93b732054
+EBUILD ruby-1.9.0.4.ebuild 4699 RMD160 2659ed1f26a35714b56bd12558450b318f81ed4a SHA1 1090db7c1ce37e1914dc8f5efb6c11eafb390537 SHA256 68191d5178e5c3b8486f795a1116b2774ca1e3ad424e38139d75eac8542babce
+MISC ChangeLog 50708 RMD160 9dc24aa067c06467e951a42dcc95f7ebb4ed80c8 SHA1 084ece994e94c2699e66f8ea96d2ce9f9357f226 SHA256 5ac458b1584d1d5e7996985964893a4e338602e0eb6067952134e8b7a5fcfb2e
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
